# CodeClash

./: .gitignore  README.md  package-lock.json  package.json
Bruno/Ace/: Create User.bru  Get.bru  Progress.bru  bruno.json
client/: package-lock.json  package.json
client/.next/: app-build-manifest.json  prerender-manifest.json  trace
client/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
client/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
client/.next/server/vendor-chunks/: @babel.js  @emotion.js  @mui.js  @popperjs.js  @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  clsx.js  combined-stream.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  hoist-non-react-statics.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  object-assign.js  prop-types.js  proxy-from-env.js  react-is.js  stylis.js  (+2 more)
client/app/: layout.js  page.js
client/app/components/: AppBar.js  LeetCodeTracker.js  Login.js  LoginModal.js  Main.js  Profile.js  Register.js  RegisterModal.js
client/app/friends/: page.js
client/app/leaderboard/: page.js
client/app/profile/: page.js
client/app/tournaments/: page.js
server/: crud.py  database.py  loadData.py  main.py  models.py  pyproject.toml  schemas.py
server/data/: blind75.py  neetcode150.py
server/routers/: auth.py  home.py
(+33 files in other folders)
