[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jwt>=1.4.0",
    "mysql-connector-python>=9.4.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]
